syntax = "proto3";

package test;

message Value {
  oneof kind {
    DoubleList double_list = 1;
    StringList string_list = 2;
  }
}

message Value2 {
  repeated double double_list = 1;
  repeated string string_list = 2;
}

message DoubleList {
  repeated double values = 1;
}

message StringList {
  repeated string values = 1;
}
